--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,7 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,8 +30,8 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
 
-.text-center {
+/* .text-center {
   text-align: center;
-}
+} */
